semester2/object_oriented_programming/tps/.svn/pristine/10/108123f0081d618eb00742165cb9ccb55d5a855f.svn-base
./allumettes/StrategieExpert.java:18: error: cannot find symbol
			val = Generateur.nb_Aleatoire(jeu);
			      ^
  symbol:   variable Generateur
  location: class StrategieExpert
./allumettes/StrategieNaive.java:6: error: cannot find symbol
		int val = Generateur.nb_Aleatoire(jeu);
		          ^
  symbol:   variable Generateur
  location: class StrategieNaive
2 errors
